[gd_scene load_steps=18 format=3 uid="uid://djpkrm81bvewr"]

[ext_resource type="Script" path="res://Assets/Content/UI/Store/store_choice.gd" id="1_2sx5i"]
[ext_resource type="PackedScene" uid="uid://b10x10md87dxx" path="res://Assets/Content/UI/StatsDisplay.tscn" id="1_px1wr"]
[ext_resource type="Resource" uid="uid://ehsif27px68g" path="res://Assets/Ressources/Weapons/W_FireGreatSword.tres" id="2_13yhi"]
[ext_resource type="FontFile" uid="uid://c3rjhfocf1qp6" path="res://Assets/Fonts/PeaberryBase.ttf" id="4_pcdk4"]
[ext_resource type="Texture2D" uid="uid://ypdypue51nrh" path="res://Assets/Sprites/Object/Soul.png" id="5_arjhi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2uh8p"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 15.0
expand_margin_top = 15.0
expand_margin_right = 15.0
expand_margin_bottom = 15.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sixi8"]
bg_color = Color(0.2, 0.0394667, 0.028, 0.752941)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 15.0
expand_margin_top = 15.0
expand_margin_right = 15.0
expand_margin_bottom = 15.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g1fk0"]
bg_color = Color(0.160784, 0.160784, 0.160784, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 15.0
expand_margin_top = 15.0
expand_margin_right = 15.0
expand_margin_bottom = 15.0

[sub_resource type="LabelSettings" id="LabelSettings_c6hby"]
font = ExtResource("4_pcdk4")
font_size = 35

[sub_resource type="AtlasTexture" id="AtlasTexture_i7yxe"]
atlas = ExtResource("5_arjhi")
region = Rect2(0, 0, 8, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_ovlfl"]
atlas = ExtResource("5_arjhi")
region = Rect2(8, 0, 8, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_eo4u5"]
atlas = ExtResource("5_arjhi")
region = Rect2(16, 0, 8, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_imfsk"]
atlas = ExtResource("5_arjhi")
region = Rect2(24, 0, 8, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxd2x"]
atlas = ExtResource("5_arjhi")
region = Rect2(32, 0, 8, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_gslov"]
atlas = ExtResource("5_arjhi")
region = Rect2(40, 0, 8, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0u2c"]
atlas = ExtResource("5_arjhi")
region = Rect2(48, 0, 8, 14)

[sub_resource type="SpriteFrames" id="SpriteFrames_vs6ga"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7yxe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ovlfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eo4u5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_imfsk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxd2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gslov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0u2c")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[node name="StoreChoice" type="Button"]
process_mode = 3
texture_filter = 1
offset_right = 192.0
offset_bottom = 390.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/focus = SubResource("StyleBoxFlat_2uh8p")
theme_override_styles/disabled = SubResource("StyleBoxFlat_sixi8")
theme_override_styles/normal = SubResource("StyleBoxFlat_g1fk0")
script = ExtResource("1_2sx5i")
_weapon = ExtResource("2_13yhi")

[node name="StatsDisplay" parent="." node_paths=PackedStringArray("_owner") instance=ExtResource("1_px1wr")]
layout_mode = 1
_owner = NodePath("..")

[node name="Deco2" parent="StatsDisplay" index="1"]
offset_bottom = 250.0

[node name="PriceLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 88.0
offset_top = 352.0
offset_right = 154.0
offset_bottom = 388.0
text = "0
"
label_settings = SubResource("LabelSettings_c6hby")
horizontal_alignment = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="PriceLabel"]
position = Vector2(88, -1)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_vs6ga")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.478781

[editable path="StatsDisplay"]
